# 2D-Rendering

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: default.fs.spv
src/include/: Game.hpp  GlfwWrapper.hpp  VulkanWrapper.hpp  game.hpp  glfw_wrapper.hpp  vulkan_wrapper.hpp
src/include/gamestate/: gamestate.h  gamestate_intro.h
src/include/platform/: Platform.hpp  platform.hpp
src/include/render/: PushConstants.hpp  RenderManager.hpp  SpriteManager.hpp  Vertex.hpp  push_constants.hpp  render_manager.hpp  sprite_manager.hpp  vertex.hpp
src/include/resource/: ResourceManager.hpp  resource_manager.hpp
src/include/vml/: mat2.hpp  mat3.hpp  mat4.hpp  quaternion.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/main/: Game.cpp  GlfwWrapper.cpp  Main.cpp  VulkanWrapper.cpp  game.cpp  glfw_wrapper.cpp  main.cpp  vulkan_wrapper.cpp
src/main/gamestate/: gamestate_intro.cpp
src/main/platform/: Mac.cpp  Windows.cpp
src/main/render/: RenderManager.cpp  SpriteManager.cpp  render_manager.cpp  sprite_manager.cpp
src/main/resource/: ResourceManager.cpp  resource_manager.cpp
src/main/vml/: mat2.cpp  mat3.cpp  mat4.cpp  quaternion.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/resources/osx/: info.plist.in
src/resources/shaders/: default.fs.glsl  default.vs.glsl
tools/TexturePackager/: CMakeLists.txt
tools/TexturePackager/src/include/: Atlas.h  PngReader.h
tools/TexturePackager/src/main/: Atlas.cpp  Main.cpp  PngReader.cpp
